# orbital-simulator

./: .gitignore  CMakeLists.txt  README.md  sim.py
include/: CollisionMap.hpp  MemoryBlock.hpp  SimulationStep.cuh  Simulator.hpp  SimulatorBase.hpp  SimulatorSGP4.hpp  Timer.hpp  Viewer.hpp
matlab/: ellipses_2d.m  main.m
python/: check_tles.ipynb  tle_getter.ipynb
src/: sim_cpu.cpp  sim_gpu.cu  sim_sgp4.cpp
